<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGold"
    tools:context=".CreateCashReturnActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="602dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/CashReturnText"
            android:layout_width="269dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="90dp"
            android:fontFamily="@font/be_vietnam_bold"
            android:text="@string/Update_text"
            android:textColor="@color/navyBlue"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="390dp"
            android:layout_height="475dp"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CashReturnText"
            app:srcCompat="@drawable/big_rectangle" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="323dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:text="@string/paw_ID"
            android:textAlignment="viewStart"
            android:textColor="@color/navyBlue"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="22dp"
            tools:layout_editor_absoluteY="82dp"
            tools:layout_marginStart="20dp"
            tools:layout_marginTop="3dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/FullName"
            android:layout_width="@dimen/inputTextWidth"
            android:layout_height="@dimen/inputTextHeight"
            android:background="@drawable/edit_text"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            tools:layout_editor_absoluteY="141dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullName"
                android:layout_width="@dimen/input_value_width"
                android:layout_height="@dimen/input_value_height"
                android:layout_marginStart="20dp"
                android:layout_marginTop="3dp"
                android:background="#00FFFFFF"
                android:hint="@string/fullName"
                android:textColorHint="@color/navyBlue" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Email"
            android:layout_width="@dimen/inputTextWidth"
            android:layout_height="@dimen/inputTextHeight"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/FullName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="@dimen/input_value_width"
                android:layout_height="@dimen/input_value_height"
                android:layout_marginStart="20dp"
                android:layout_marginTop="3dp"
                android:background="#00FFFFFF"
                android:hint="@string/email"
                android:textColorHint="@color/navyBlue" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Phone"
            android:layout_width="@dimen/inputTextWidth"
            android:layout_height="@dimen/inputTextHeight"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/Email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="@dimen/input_value_width"
                android:layout_height="@dimen/input_value_height"
                android:layout_marginStart="20dp"
                android:layout_marginTop="3dp"
                android:background="#00FFFFFF"
                android:hint="@string/phone"
                android:textColorHint="@color/navyBlue" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CashAmount"
            android:layout_width="@dimen/inputTextWidth"
            android:layout_height="@dimen/inputTextHeight"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/Phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cash"
                android:layout_width="@dimen/input_value_width"
                android:layout_height="@dimen/input_value_height"
                android:layout_marginStart="20dp"
                android:layout_marginTop="3dp"
                android:background="#00FFFFFF"
                android:hint="@string/cashAmount"
                android:textColorHint="@color/navyBlue" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/DateToCollect"
            android:layout_width="@dimen/inputTextWidth"
            android:layout_height="@dimen/inputTextHeight"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/CashAmount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date"
                android:layout_width="@dimen/input_value_width"
                android:layout_height="@dimen/input_value_height"
                android:layout_marginStart="20dp"
                android:layout_marginTop="3dp"
                android:background="#00FFFFFF"
                android:hint="@string/date_to_collect_your_pawn_item"
                android:textColorHint="@color/navyBlue" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/createBtn2"
            android:layout_width="120dp"
            android:layout_height="54dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/navyBlue"
            android:text="@string/Update"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/cancelBtn2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/DateToCollect" />

        <Button
            android:id="@+id/cancelBtn2"
            android:layout_width="118dp"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/navyBlue"
            android:text="@string/cancelBtn"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/Phone"
            app:layout_constraintTop_toBottomOf="@+id/DateToCollect" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>