<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGold"
    android:backgroundTint="@color/lightGold">


    <Button
        android:id="@+id/Delete1"
        android:layout_width="120dp"
        android:layout_height="54dp"
        android:layout_marginStart="62dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="@color/navyBlue"
        android:text="@string/Delete"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/Update1" />

    <Button
        android:id="@+id/Update1"
        android:layout_width="120dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="@color/navyBlue"
        android:text="@string/Update"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="288dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/be_vietnam_bold"
        android:text="@string/View_Return"
        android:textColor="@color/navyBlue"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184">

    </TextView>

    <TextView
        android:id="@+id/fullName"
        android:layout_width="229dp"
        android:layout_height="34dp"
        android:layout_marginStart="169dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="166dp"
        android:background="@color/gold"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/email"
        android:layout_width="206dp"
        android:layout_height="53dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="113dp"
        android:background="@color/gold"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="216dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:background="@color/gold"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cashAmount" />

    <TextView
        android:id="@+id/cashAmount"
        android:layout_width="210dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:background="@color/gold"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName" />

    <TextView
        android:id="@+id/csNIC"
        android:layout_width="221dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="140dp"
        android:background="@color/gold"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/Update1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateCollect" />

    <TextView
        android:id="@+id/dateToCollect"
        android:layout_width="216dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:background="@color/gold"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />


</androidx.constraintlayout.widget.ConstraintLayout>
